práce na kapitole Návrh a konfigurace replikace, drobné úpravy, opravy překlepů a formulací

--- a/text/latex_text/Solanska_DP.tex
+++ b/text/latex_text/Solanska_DP.tex
@@ -56,7 +56,6 @@
     %------------------------------------------------------------------------- ILUSTRACE
     \newpage
     \listoffigures
-    \newpage
     \listoftables
 
     %------------------------------------------------------------------------- GLOSSARY
@@ -103,6 +102,7 @@
       \input{kapitoly/konfigurace/1_navrh_replikacniho_reseni.tex}
       \input{kapitoly/konfigurace/2_priprava_prostredi_pro_konfiguraci.tex}
       \input{kapitoly/konfigurace/3_konfigurace_replikace.tex}
+      \input{kapitoly/konfigurace/4_rozlozeni_zateze.tex}
 
     %------------------------------------------------------------------------- DISKUZE
     \newpage
