--- a/text/latex_text/kapitoly/cile.tex
+++ b/text/latex_text/kapitoly/cile.tex
@@ -1,9 +1,6 @@
-Cílem diplomové práce je provést rešerši v oblasti dostupných replikačních řešení a na jejím základě prakticky otestovat proces synchronizace a replikace geodat, které je možnost v kombinaci s ArcGIS produkty.
+Cílem diplomové práce je provést rešerši v oblasti dostupných replikačních řešení a~na jejím základě prakticky otestovat proces synchronizace a replikace geodat s ohledem na možnosti kombinace s produkty ArcGIS. V rešerši budou diskutovány databázové servery SQL Server a PostgreSQL, oba podporované produkty ArcGIS, a na jejím základě pak bude vybrán jeden, na kterém bude proces replikace prakticky testován.
 
-V teoretické části práce budou podrobně definovány pojmy týkající se zálohování dat, především však synchronizace a replikace, dále deteilně rozebrána replikace ve všech možných variantách nastavení, tedy jednosměrná, dvousměrná, synchronní, asynchronní, kaskádová, logická a fyzická. Dále rozbor zahrne celé portfólio produktů od desktop řešení, přes možnosti ArcGIS serveru až po cloudový ArcGIS online.
+V teoretické části práce budou podrobně definovány pojmy týkající se zálohování dat, především však synchronizace a replikace, dále detailně rozebrána replikace ve všech možných variantách nastavení, tedy jednosměrná, dvousměrná, synchronní, asynchronní, kaskádová, logická a fyzická. Dále rozbor zahrne celé portfolio produktů od desktopového řešení, přes možnosti ArcGIS serveru až po cloudový ArcGIS online.
 
-V rešerší části budou diskutovány dva databázové server, SQL Server a PostgreSQL, oba podporované ArcGIS produkty a jejím základě pak vybrát jeden, na kterém pak proces replikace bude prakticky testován.
+Praktická část se bude zabývat návrhem replikačního řešení zohledňujícího požadavky katedry na databázové řešení a bude brát v úvahu její možnosti a způsob využívání databáze. Bude připraveno testovací prostředí na základě vytvořeného návrhu, které bude následně prakticky vyzkoušeno. Bude porozováno, zda replikace probíhá bez chyb a jsou přenesena všechna data v relativně krátkém časovém horizontu. Na závěr budou sepsána doporučení pro efektivní využívání databázového řešení.
 
-Praktická část se bude zabývát návrhem replikačního řešení, které zahrne požadavky a možnosti katedry a bude brát v úvahu její způsoby využívání databáze. Na základě rešerše pak bude vybráno replikační řešení, připraveno testovací prostředí na základě všech výše zmíněných kritérií a na konec i praktickému testování výše zmíněných procesů.
-
-Postupnými opakovanými procesy budou sledovány dílčí parametry procesu (rychlost procesu, úplnost, chybovost, podporované formáty). 
