--- a/text/latex_text/kapitoly/konfigurace/3_konfigurace_replikace.tex
+++ b/text/latex_text/kapitoly/konfigurace/3_konfigurace_replikace.tex
@@ -1,6 +1,7 @@
 \subsection{Konfigurace replikace}
 \label{kKonfigurace}
 \subsubsection{Streaming replikace}
+\label{kStreaming}
       \input{kapitoly/konfigurace/3a_konfigurace_replikace_streaming.tex}
 \subsubsection{Slony-I}
       \input{kapitoly/konfigurace/3a_konfigurace_replikace_slony.tex}
