--- a/text/latex_text/kapitoly/konfigurace/3a_konfigurace_replikace_slony.tex
+++ b/text/latex_text/kapitoly/konfigurace/3a_konfigurace_replikace_slony.tex
@@ -23,7 +23,8 @@ CREATE TABLE
 Dále tento způsob obnáší vytvoření konfiguračních skriptů, které zajistí inicializaci replikace. Slony-I pro to používá vlastní konfigurační jazyk, pomocí kterého se nastavují konkrétní požadavky na replikaci. Na začátku se díky němu sestaví konfigurační soubor k inicializaci replikace, později se používá pro jakýkoli zásah do replikace, například přidání další tabulky do replikačního setu nebo změny struktury databáze. Tento vzniklý konfigurační skript se provede pomocí utility \texttt{slonik}, která se vždy spouští jednorázově a vykonává požadavky definované v konfiguračním souboru. 
 
 Ukázka konfiguračního skriptu nazvaného \texttt{init\_master.txt} uloženého na master serveru pro inicializaci replikačního clusteru (init cluster):
-\begin{lstlisting}[identifierstyle=\color{black},stringstyle=\color{black},keywordstyle=\color{black}]
+%\begin{lstlisting}[identifierstyle=\color{black},stringstyle=\color{black},keywordstyle=\color{black}]
+\begin{lstlisting}[language=ruby]
 $master = 'dbname=studenti host=192.168.1.100 user=replikator password=kgigis'
 $slave1 = 'dbname=studenti host=192.168.1.101 user=replikator password=kgigis'
 $slave2 = 'dbname=studenti host=192.168.1.102 user=replikator password=kgigis'
@@ -50,12 +51,12 @@ create set (id=1, origin=1, comment='Tabulky k replikaci');
 set add table (set id=1, origin=1, id=1, fully qualified name = 'public.student', comment='seznam studentu');
 set add table (set id=1, origin=1, id=2, fully qualified name = 'public.rodne_mesto', comment='seznam mest');
 
-store path (server=1, client=2, conninfo='$slave1';
-store path (server=1, client=3, conninfo='$slave2';
-store path (server=2, client=1, conninfo='$master';
-store path (server=2, client=3, conninfo='$slave2';
-store path (server=3, client=1, conninfo='$master';
-store path (server=3, client=2, conninfo='$slave1';
+store path (server=1, client=2, conninfo=$slave1);
+store path (server=1, client=3, conninfo=$slave2);
+store path (server=2, client=1, conninfo=$master);
+store path (server=2, client=3, conninfo=$slave2);
+store path (server=3, client=1, conninfo=$master);
+store path (server=3, client=2, conninfo=$slave1);
 
 store listen (origin=1, provider=2, receiver=1);
 store listen (origin=1, provider=1, receiver=2);
@@ -89,7 +90,8 @@ Konfigurační skript pro inicializaci clusteru se spustí ze stejné složky, v
 
 Pomocí dalších skriptu se mohou slave servery přihlásit odběru replikačního setu. Příklad vytvoření skriptu \texttt{subscribe\_slave1.txt} pro přidání serveru do existujícího clusteru (subscribe set):
 
-\begin{lstlisting}[identifierstyle=\color{black},stringstyle=\color{black},keywordstyle=\color{black}]
+%\begin{lstlisting}[identifierstyle=\color{black},stringstyle=\color{black},keywordstyle=\color{black}]
+\begin{lstlisting}[language=ruby]
 # nazev clusteru
 cluster name = gis_cluster;
 
@@ -117,18 +119,18 @@ To, že se vytvořit cluster a tabulka do něj byla přidána, lze zkontrolovat 
           \begin{tabular}{lllllll}
             \multicolumn{7}{l}{\texttt{studenti=\# \slash d student}} \\
             \multicolumn{5}{c}{\texttt{Tabulka "public.student"}} & & \\
-            \texttt{Column} & \texttt{|} & \texttt{Type} & \texttt{|} & \texttt{Modifiers} & & \\ 
-  \texttt{----------------} & \texttt{+} & \texttt{-------------------} & \texttt{+} & \texttt{--------------} & & \\
-                                        \texttt{id} & \texttt{|} & \texttt{integer} & \texttt{|} & \texttt{not null} & & \\
-                                     \texttt{jmeno} & \texttt{|} & \texttt{character varying} & \texttt{|} & & & \\
-                          \texttt{id\_rodne\_mesto} & \texttt{|} & \texttt{integer} & \texttt{|} & & \\
+                      \texttt{Column} & \texttt{|} & \texttt{Type} & \texttt{|} & \texttt{Modifiers} & & \\ 
+            \texttt{----------------} & \texttt{+} & \texttt{-------------------} & \texttt{+} & \texttt{--------------} & & \\
+                          \texttt{id} & \texttt{|} & \texttt{integer} & \texttt{|} & \texttt{not null} & & \\
+                        \texttt{jmeno} & \texttt{|} & \texttt{character varying} & \texttt{|} & & & \\
+                                \texttt{id\_rodne\_mesto} & \texttt{|} & \texttt{integer} & \texttt{|} & & \\
             \multicolumn{7}{l}{\texttt{Indexes: "student\_pkey" PRIMARY KEY, btree (id)}} \\
             \multicolumn{7}{l}{\texttt{Triggers: \_gis\_cluster\_logtrigger AFTER INSERT OR DELETE}} \\
-        \multicolumn{7}{l}{\texttt{OR UPDATE ON repl\_test FOR EACH ROW EXECUTE PROCEDURE}} \\
-      \multicolumn{7}{l}{\texttt{\_is\_cluster.logtrigger('\_gis\_cluster', '1', 'k')}} \\
-  \multicolumn{7}{l}{\texttt{Disabled triggers: \_gis\_cluster\_denyaccess BEFORE INSERT}} \\
-\multicolumn{7}{l}{\texttt{OR DELETE OR UPDATE ON repl\_test FOR EACH ROW EXECUTE PROCEDURE}} \\
-\multicolumn{7}{l}{\texttt{\_gis\_cluster.denyaccess('\_gis\_cluster')}} \\
+            \multicolumn{7}{l}{\texttt{OR UPDATE ON repl\_test FOR EACH ROW EXECUTE PROCEDURE}} \\
+            \multicolumn{7}{l}{\texttt{\_is\_cluster.logtrigger('\_gis\_cluster', '1', 'k')}} \\
+            \multicolumn{7}{l}{\texttt{Disabled triggers: \_gis\_cluster\_denyaccess BEFORE INSERT}} \\
+            \multicolumn{7}{l}{\texttt{OR DELETE OR UPDATE ON repl\_test FOR EACH ROW EXECUTE PROCEDURE}} \\
+            \multicolumn{7}{l}{\texttt{\_gis\_cluster.denyaccess('\_gis\_cluster')}} \\
           \end{tabular}
         \end{center}
     \end{table}
@@ -137,12 +139,12 @@ Běh replikace je zajištěn vlastním démonem, který je možnost spustit v ok
 
 Příklad spuštění démona na master serveru s názvem clusteru a parametry připojení k serveru:
 \begin{lstlisting}
-slon gis_cluster 'host=192.168.1.100 dbname=student user=replikator'
+slon gis_cluster 'host=192.168.1.100 dbname=student  user=replikator'
 \end{lstlisting}
 Obdobně je démona spuštěn i na obou slave serverech:
 \begin{lstlisting}
-slon gis_cluster 'host=192.168.1.101 dbname=student user=replikator'
-slon gis_cluster 'host=192.168.1.102 dbname=student user=replikator'
+slon gis_cluster 'host=192.168.1.101 dbname=student  user=replikator'
+slon gis_cluster 'host=192.168.1.102 dbname=student  user=replikator'
 \end{lstlisting}
 
 Podoboně jako u streaming replikace, lze zkontrolovat, že replikace běží správně, přidáním nového záznamu na slave server. Pokud nepovolí přidání a vypíše následující chybu, znamená, že je replikace správně nastavená a funkční.
@@ -159,12 +161,13 @@ Přidání další tabulky či jakákoli jiná změna struktury databáze probí
 Vytvoření souboru \texttt{createTable.sql} ve slozce \texttt{/tmp/} s SQL příkazem \texttt{CREATE TABLE}:
 
 \begin{lstlisting}
-CREATE TABLE predmety (id int, jmeno nazev, primary key(id));
+CREATE TABLE predmet (id int, jmeno varchar, primary  key(id));
 \end{lstlisting}
 
 Vytvoření skriptu \texttt{ddlZmena.txt}, který umožní přidání tabulky za chodu replikace:
 
-\begin{lstlisting}[identifierstyle=\color{black},stringstyle=\color{black},keywordstyle=\color{black}]
+%\begin{lstlisting}[identifierstyle=\color{black},stringstyle=\color{black},keywordstyle=\color{black}]
+\begin{lstlisting}[language=ruby]
 # nazev clusteru
 cluster name = gis_cluster;
 
@@ -181,33 +184,32 @@ execute script (
 
 \end{lstlisting}
 
-Spuštění programu \texttt{slonik}, který spustí skript a vykoná daný SQL příkaz na všech uzlech. 
+Spuštění programu \texttt{slonik}, který spustí skript a vykoná daný SQL příkaz na všech uzlech: 
 
 \begin{lstlisting}
 slonik ddlZmena.txt
 \end{lstlisting}
 \begin{lstlisting}[identifierstyle=\color{black},stringstyle=\color{black},keywordstyle=\color{black}]
 DDL script consisting of 2 SQL statements
-DDL Statement 0: (0,67) [ CREATE TABLE repl_address (id serial, name text, primary key(id));]
-slony_ddl.txt:6: NOTICE:  CREATE TABLE will create implicit sequence "repl_address_id_seq" for serial column "repl_address.id"
-slony_ddl.txt:6: NOTICE:  CREATE TABLE / PRIMARY KEY will create implicit index "repl_address_pkey" for table "repl_address"
+DDL Statement 0: (0,67) [ CREATE TABLE predmety (id int, nazev varchar, primary key(id));]
+slony_ddl.txt:6: NOTICE:  CREATE TABLE / PRIMARY KEY will create implicit index "predmety_pkey" for table "predmety"
 DDL Statement 1: (67,69) [ ]
 Submit DDL Event to subscribers...
 \end{lstlisting}
 
-
-Takto se tabulka přidá do databáze, nikoliv však do replikačního clusteru. K tomu je potřeba vytvořit další slonik skript. 
+Podrobný výpis informuje, že se změnilo DDL\footnote{Data Definition Language} schéma, které provádí příkazy CREATE, ALTER, DROP, tedy příkazy měnící strukturu databáze. Posledním řádkem potvrzuje, že se schéma zapsalo také na slave servery. Takto se tabulka přidá do databáze, nikoliv však do replikačního clusteru. K tomu je potřeba vytvořit další slonik skript. 
 
 Vytvoření skriptu \texttt{add\_to\_set.txt} pro přidání tabulky do replikačního clusteru:
 
-\begin{lstlisting}[identifierstyle=\color{black},stringstyle=\color{black},keywordstyle=\color{black}]
+%\begin{lstlisting}[identifierstyle=\color{black},stringstyle=\color{black},keywordstyle=\color{black}]
+\begin{lstlisting}[language=ruby]
 # nazev clusteru
 cluster name = gis_cluster;
 
 # definice jednotlivych uzlu v clusteru
-node 1 admin conninfo='dbname=studenti host=192.168.1.100 user=replikator password=kgigis';
-node 2 admin conninfo='dbname=studenti host=192.168.1.101 user=replikator password=kgigis';
-node 3 admin conninfo='dbname=studenti host=192.168.1.102 user=replikator password=kgigis';
+node 1 admin conninfo=$master;
+node 2 admin conninfo=$slave1;
+node 3 admin conninfo=$slave2;
 
 # definice noveho setu (id 2)
 create set (id=2, origin=1, comment='Dalsi tabulky k replikaci');
@@ -228,5 +230,5 @@ Spuštění skriptu \texttt{slonik}, které příkazy vykoná
 slonik add_to_set.txt
 \end{lstlisting}
 
-Podobně je možné provést také smazání tabulky pomocí parametru \texttt{DROP SET} a mnohé další. 
+Podobně je možné provést také smazání tabulky pomocí parametru \texttt{DROP SET}. 
 
