--- a/text/latex_text/literatura.bib
+++ b/text/latex_text/literatura.bib
@@ -6,7 +6,7 @@
   title = {PostgreSQL Replication: Understand basic replication concepts and efficiently replicate PostgreSQL using high-end techniques to protect your data and run your server without interruptions},
   address = {Birmingham},
   publisher = {Packt Publishing},
-  year = {c2013},
+  year = {2013},
   pages = {vii, 230 s.},
   ISBN = {978-1-84951-672-3}
 }
@@ -42,7 +42,7 @@
   title = {Pro Git},
   address = {Praha},
   publisher = {CZ.NIC},
-  year = {c2009},
+  year = {2009},
   pages = {263 s},
   series = {Edice CZ.NIC},
   ISBN = {978-80-904248-1-4}
