--- a/text/latex_text/kapitoly/konfigurace/0_konfigurace_uvod.tex
+++ b/text/latex_text/kapitoly/konfigurace/0_konfigurace_uvod.tex
@@ -1,7 +1,17 @@
 Tato kapitola se zabývá hodnocením současného stavu správy dat na katedře geoinformatiky, návrhem databázového řešení dle požadavků a možností katedry a podrobně popisuje vytvoření testovacího prostředí na serverech katedry dle vytvořeného návrhu. Do hloubky popisuje konfiguraci vybraných nástrojů, včetně jejich praktického spuštění. 
-Katedra aktuálně provozuje tři servery, konkrétně virtus.upol.cz, gislib.upol.cz a geohydro.upol.cz. Poslední z jmenovaných byl poskytnut jako testovací server pro tutu práci a v budoucnu s ním počítá jako s master serverem pro zde popisované databázové řešení. První dva zmíněné servery jsou aktivně používané a kromě jiných služeb, je zde spuštěn také MS SQL Server. Na tyto databáze je připojený například geoportál běžící skrze ArcGIS Server nebo metadatový systém Micka. Každý ze serverů momentálně obsahuje jiná data, která nejsou pravidelně zálohovaná, protože aktualizace dat není příliš častá. Aktuální stav nepoužívá replikaci dat, což hrozí nedostupností dat výpadkem serveru. 
-Databáze aktuálně obsahují data z projektů BotanGIS\footnote{http://botangis.upol.cz/botangis/mapa}, Virtuální studovny CHKO Litovelské Pomoraví\footnote{http://virtus.upol.cz/}, dále data metadatového systému Micka\footnote{gislib.upol.cz/metadata}, data ze senzorové sítě KGI, data ke studentským prací a ukázková data určená pro výuku. Je založeno přibližně 10 účtů, které mají přístup pro zápis, a řádově v desítkách účtů s právem čtení. V současné situaci není příliš často do databází zapisováno. 
 
-Současný stav, kdy se přenášejí data přes různá hardwarová zařízení nebo kopírují po síti, není plně vyhovující mimo jiné z důvodu, že se často jedná o velké objemy dat, jejichž kopie může trvat řádově až desítky minut. 
-Katedra má zájem využít potenciál databázového řešení a plánuje využít tento návrh k uložení dalších datových sad, které má k dispozici a které jsou momentálně dostupné ve formátech shapefile nebo geodatabase, ale zatím neukládá do databáze a nesdílí skrze ní. Jedná se například o datové sady ArcČR500, Data200 (ČUZK) nebo CEDA ČR 150.
-Takto připravená data poté mnohem snáze využitelná jak pracovníky, tak i studenty katedry nejen pro výuku, ale také pro jejich odborné práce. 
+\subsection{Aktuální stav správy dat}
+\label{kAktualniStav}
+
+Katedra aktuálně provozuje tři servery, konkrétně virtus.upol.cz, gislib.upol.cz a geohydro.upol.cz. Poslední z jmenovaných byl poskytnut jako testovací server pro tuto práci a v budoucnu s ním počítá jako s master serverem pro zde popisované databázové řešení. První dva zmíněné servery jsou aktivně používány, hostují například geoportál publikovaný skrze ArcGIS Server, který je důležitým prostředkem pro prezentaci projektů a dat, která na katedře vznikají. Data ke geoportálu i dalším aplikacím běžícím na těchto serverech jsou ukládána do MS SQL Serveru, každý ze serverů momentálně obsahuje jiné datové sady, které nejsou pravidelně zálohovány, protože aktualizace dat není příliš častá. Aktuální řešení nepoužívá replikaci dat, což může způsobovat nedostupnost dat z důvodu výpadku serveru. 
+
+Databáze aktuálně obsahují data například z projektů BotanGIS\footnote{\url{http://botangis.upol.cz/botangis/mapa}}, Virtuální studovna CHKO Litovelské Pomoraví\footnote{http://virtus.upol.cz/}, dále data metadatového systému Micka\footnote{\url{gislib.upol.cz/metadata}}, data ze senzorové sítě KGI, data ke studentským pracím a také ukázková data určená pro výuku. Je založeno přibližně 10 účtů, které mají přístup pro zápis, a řádově v desítkách účtů s právem čtení. V současné situaci není do databází příliš často zapisováno. 
+
+Současný stav, kdy se přenášejí data přes různá hardwarová zařízení nebo kopírují po síti, není plně vyhovující z několika důvodů. Často jedná o velké objemy dat, jejichž kopie může trvat řádově až desítky minut. Studenti si musejí dělat kopie dat při každém cvičení, což velice zdržuje výuku. Data jsou poté fyzicky uložena na počítačích v učebnách, což mimo jiné dovoluje, aby se k datům například z různých projektů dostal kdokoliv, kdo má přístup na učebnu. Při každé aktualizaci dat je navíc potřeba data opět zkopírovat, což je další časové omezení, k tomu může dojít k nekonzistenci dat různých datových zdrojů. 
+
+\subsection{Požadavky na databázové řešení}
+\label{kPozadavky}
+
+Katedra má zájem využít potenciál databázového řešení a plánuje využít tento návrh k uložení dalších datových sad, které má k dispozici a které jsou momentálně dostupné ve formátech shapefile nebo geodatabáze, ale zatím nejsou uložená v databázi, kterou je možno sdílet. Jedná se například o datové sady ArcČR500 verze 2.0 a 3.0, Data200 (ČUZK), CEDA ČR 150, data, která byla uvolněna pro podporu pro Krajinotvorný program MŽP, nebo data dostupná k produktům Esri nebo Idrisi. Data uložená v databázi pak budou mnohem snáze využitelná jak pracovníky, tak i studenty katedry, kteří data využijí nejen ve výuce, ale také v jejich odborných prácích. Při kopírováním dat na různá datová uložiště je navíc těžké udržet licenční podmínky, se kterými jsou data pořizována. 
+
+
