--- a/text/latex_text/kapitoly/teorie/1_teorie_uvod.tex
+++ b/text/latex_text/kapitoly/teorie/1_teorie_uvod.tex
@@ -1,33 +1,31 @@
-Databáze je strukturovaná kolekce dat. Slouží pro efektivní ukládání dat a jejich zpětně čtení \citep{Oppel2009}. V relační databáze jsou ukládána ve formě tabulek, tedy entit a atributů, a jsou vzájemně propojeny logickými vazbami, které se nazývájí {\it relace} \citep{Connolly2005}. Toto logické uložení vazeb mezi tabulkami umožňuje efektivní manipulaci s daty, rychlé vyhledávání i komplexní analýzu \citep{Momjian2001}. 
+Databáze je strukturovaná kolekce dat, která slouží pro efektivní ukládání dat a jejich zpětně čtení \citep{Oppel2009}. V relační databázi jsou data ukládána ve formě tabulek, tedy entit a atributů, a jsou vzájemně propojeny logickými vazbami, které se nazývájí {\it relace} \citep{Connolly2005}. Toto logické uložení vazeb mezi tabulkami umožňuje efektivní manipulaci s daty, rychlé vyhledávání i komplexní analýzu \citep{Momjian2001}. 
 
 Základy {\it relační databáze} položil v roce 1970 matematik E. F. Codd, který relačnímu modelu přidal i srozumitelné příkazy vycházejících z běžné angličtiny, které jsou dnes známy jako jazyk {\it SQL} (Structured Query Language)\citep{Zak2001}. V dnešní době je možné setkat se také s pojmy objektová a objektově-relační databáze, které přebírají řadu vlastností z oblasti objektového programování.
 
-Obvykle se rozlišují pojmy databáze, který odkazuje na obecný koncept, a pojem databázový systém nebo přesněji {\it systém řízení báze dat} \footnote{angl. Database Management System (DBMS)}, což je konkrétním počítačovým program, který zajišťuje fyzické uložení dat. Moderní SŘBD jsou navrženy na principu klient/server, kdy databáze běží jako služba na pozadí a čeká na dotazy od klientů. Server umožňuje uživatelům přístup k databázi, vytváření a aktualizace dat, stejně jak jako vyhledávání či analýzu \citep{Connolly2005}. Uživatel s databázi komunikuje skrze jazyk SQL většinou v kombinaci s vlastním jazykem daného databázového systému.
+Obvykle se rozlišují pojmy databáze, který odkazuje na obecný koncept, a pojem databázový systém nebo přesněji {\it systém řízení báze dat} \footnote{angl. Database Management System (DBMS)}, což je konkrétním počítačovým program, který zajišťuje fyzické uložení dat. Moderní SŘBD jsou navrženy na principu klient/server, kdy databáze běží jako služba na pozadí a čeká na dotazy od klientů. Server uživatelům umožňuje skrze jazyk SQL přístupovat k databázi, vytvářet a aktualizovat data, stejně jak jako vyhledávat či analýzovat \citep{Connolly2005}.
 
 Pro uložení dat malého projektu je samozřejmě možno použít i jiného formátu určeného pro ukládání dat, například soubory formátu XLS, XML, CSV či moderního JSON. Pro komplexní správu dat velkého projektu je však databáze pro své relace více než vhodná. 
 
-Prostorová databáze, někdy také zvaná geodatabáze, není nic jiného než databáze obohacená o datový typ určený pro ukládání prostorové informace o prvku, prostorové indexy a sadu funkcí vhodných pro správu prostorových dat. Více informací o prostorových databázích viz kapitola \odkazKapitola{PostgreSQL} PostgreSQL 9.x (PostGIS) a \odkazKapitola{MSSQL} MS SQL Server 2008. 
+{\it Prostorová databáze}, někdy také zvaná {\it geodatabáze}, není nic jiného než databáze obohacená o datový typ určený pro ukládání prostorové informace o prvku, prostorové indexy a sadu funkcí vhodných pro správu prostorových dat. Více informací o prostorových databázích viz kapitola \odkazKapitola{kPostgreSQL} PostgreSQL 9.x (+ PostGIS) a \odkazKapitola{MSSQL} Microsoft SQL Server. 
 
-Prostorová data, také zvaná geodata, jsou z pohledu společnosti Esri prvky, které nesou informaci o geografické poloze, zakódovanou informaci o tvaru (bod, line, polygon) a popis geografického jevu. Tato geodata jsou uložená ve formátu, který je možno použít v geografickém informačním systému \citep{Esri2006}. Příkladem takového formátu může být vektorový Esri shapefile, Esri coverage, GML, KML, GeoJSON nebo rastrový Erdas Image a GeoTIFF. Dalším způsobem je již zmíněná databáze, do níž se vektorová data ukládají ve specifickém tvaru daném standardem OGC\footnote{OGC standardy jsou kontrolované konsorciem Open Geospatial Consortium,\newline zdroj \url{http://www.opengeospatial.org/ogc}} Simply Feature for SQL 1.2.1, který specifikuje způsob uložení dat v digitální podobě. Simply Feature je založen na 2D geometrii s~možností lineární interpolace mezi lomovými body. To umožňuje vložení následujících prvků:
+{\it Prostorová data}, také zvaná {\it geodata}, jsou z pohledu společnosti Esri prvky, které nesou informaci o geografické poloze, zakódovanou informaci o tvaru (bod, line, polygon) a popis geografického jevu. Tato geodata jsou uložená ve formátu, který je možno použít v geografickém informačním systému \citep{Esri2006}. Příkladem takového formátu může být rastrový Erdas Image, Esri grid, GeoTIFF, PNG,  JPEG2000 nebo vektorový Esri shapefile, Esri coverage, GML, KML, DFX, DGN, GeoJSON nebo GeoHash. 
 
-        \begin{itemize}
-          \item bod - POINT(0 0),
-          \item linie - LINESTRING(0 0, 1 1, 1 2),
-          \item polygon - POLYGON ((0 0,4 0,4 4,0 4,0 0),(1 1, 2 1, 2 2, 1 2,1 1)),
-          \item série bodů - MULTIPOINT((0 0),(1 2)),
-          \item série linií - MULTILINESTRING((0 0,1 1,1 2),(2 3,3 2,5 4)),
-          \item geometrická kolekce, která může obsahovat různé geoprvky (body, linie i polygony) - GEOMETRYCOLLECTION(POINT(2 3),LINESTRING(2 3,3 4))\footnote{zdroj http://postgis.net/docs/manual-2.1/using\_postgis\_dbmanagement.html\#RefObject}.
-        \end{itemize}
+Dalšími formáty, používanými právě pro ukládání dat do databáze, jsou Well-Known Binary (WKB) a Well-Known Text (WKT) pro reprezentaci vektorových dat. Jejich tvar je dán standardem OGC\footnote{OGC standardy jsou kontrolované konsorciem Open Geospatial Consortium,\newline zdroj \url{http://www.opengeospatial.org/ogc}} {\it Simply Features for SQL 1.2.1}, který specifikuje model pro uložení prostorových dat v digitální podobě. 
 
-První slovo specifikace určuje druh prvku (point, linestring, polygon, multipoint,~...), následují v závorce vypsané souřadnice lomových bodů. Za tím ještě může následovat volitelný parametr kód souřadnicového systému.
+Dle standardu OGC jsou funkce pro získání geometrie z databáze:
+\begin{itemize}
+\item \texttt{ST\_AsBinary(geometry)} pro bitový zápis WKB a
+\item \texttt{ST\_AsText(geometry)} pro WKT text.
+     \end{itemize}
 
-Hodnoty lze dále vkládat přes Well-Known Binary (WKB) nebo Well-Known Text (WKT) reprezentaci. PostGIS funkce pro vkládání geometrie vypadá následovně:
+Simply Features je založen na 2D geometrii s~možností lineární interpolace mezi lomovými body. Základní prvky\footnote{zdroj \url {http://postgis.net/docs/manual-2.1/using\_postgis\_dbmanagement.html\#RefObject}}, které je možno vkládat ve formátu druh prvku a v závorce souřadnice lomových bodů, jsou:
+\begin{itemize}
+\item bod - \texttt{POINT(0 0)},
+\item linie - \texttt{LINESTRING(0 0, 1 1, 1 2)},
+\item polygon - \texttt{POLYGON ((0 0,4 0,4 4,0 4,0 0),(1 1, 2 1, 2 2, 1 2,1 1))},
+\item série bodů - \texttt{MULTIPOINT((0 0),(1 2))},
+\item série linií - \texttt{MULTILINESTRING((0 0,1 1,1 2),(2 3,3 2,5 4))},
+\item série polygonů - \texttt{MULTIPOLYGON(((0 0,4 0,4 4,0 4,0 0),(1 1,2 1,2 2,1 2,1 1)), ((-1 -1,-1 -2,-2 -2,-2 -1,-1 -1)))} a
+\item geometrická kolekce, která může obsahovat geoprvky různých typů (body, linie, polygony) - \texttt{GEOMETRYCOLLECTION(POINT(2 3),LINESTRING(2 3,3 4))}.
+\end{itemize}
 
-        \begin{itemize}
-          \item ST\_AsBinary(geometry) pro bitový zápis WKB
-          \item ST\_AsText(geometry) pro WKT text
-        \end{itemize}
-
-Příklad použití formátu pro uložení linie do databáze s jedním lomovým bodem v souřadnicovém systému WGS84:
-
-        \texttt{(LINESTRING(15.91 50.84, 17.20 49.64, 18.92 49.82), 4326)}
